tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr31605.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr31605.c" (c, x86_64-unknown-linux-gnu)
fn exit(%arg0: s32i) -> void [external, c];
fn put_field(%arg0: u32i, %arg1: u32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u32i, %arg1: u32i):
        %6 = alloca u32i, "start", align 4
        %7 = alloca u32i, "len", align 4
        %8 = alloca s32i, "cur_bitshift", align 4
        store %arg0, %6
        store %arg1, %7
        %9 = load %6 : u32i, align 4
        %10 = load %7 : u32i, align 4
        %11 = add %9, %10 : u32i
        %12 = const 8 : u32i
        %13 = rem %11, %12 : u32i
        %14 = const 8 : u32i
        %15 = sub %13, %14 : u32i
        %16 = cast(integral) %15 : s32i
        store %16, %8, align 4
        scope {
            %17 = load %8 : s32i, align 4
            %18 = const -8 : s32i
            %19 = cmp gt %17, %18 : bool
            if %19 {
                %20 = get_global @exit : ((s32i) -> void)*
                %21 = const 0 : s32i
                call @exit(%21) [all]
                yield
            }
            yield
        }
        return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 0 : u32i
    %3 = const 1 : u32i
    call @put_field(%2, %3) [all]
    %4 = get_global @abort : (() -> void)*
    call @abort() [all]
    %5 = load %0 : s32i
    return %5
}
