tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr32500.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr32500.c" (c, x86_64-unknown-linux-gnu)
global __const.main.numbers : s32i[4] = [57005, 48879, 4919, 16962] [cir_private, default, dso_local, constant]
global x : s32i = 0 [external, default, align 4, dso_local]

fn foo(%arg2: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %34 = alloca s32i, "i", align 4
        store %arg2, %34
        %35 = load %34 : s32i, align 4
        %36 = get_global @x : s32i*
        store %35, %36, align 4
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn bar() -> void [external, c, no_inline, dso_local, nothrow] {
    %32 = get_global @exit : ((s32i) -> void)*
    %33 = const 0 : s32i
    call @exit(%33) [all]
    return
}
fn abort() -> void [external, c, nothrow];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        %3 = alloca s32i, "i", align 4
        %4 = alloca s32i[4], "numbers", align 16
        store %arg0, %0
        store %arg1, %1
        %5 = const 0 : s32i
        store %5, %2
        %6 = get_global @__const.main.numbers : s32i[4]*
        copy %4, %6
        scope {
            %9 = const 1 : s32i
            store %9, %3, align 4
            for cond: {
                %29 = load %3 : s32i, align 4
                %30 = const 12 : s32i
                %31 = cmp le %29, %30 : bool
                condition %31
            } step: {
                %10 = load %3 : s32i, align 4
                %11 = inc %10 : s32i [nsw]
                store %11, %3, align 4
                yield
            } do {
                scope {
                    scope {
                        %12 = load %3 : s32i, align 4
                        %13 = const 4 : s32i
                        %14 = cmp le %12, %13 : bool
                        if %14 {
                            %23 = load %3 : s32i, align 4
                            %24 = const 1 : s32i
                            %25 = sub %23, %24 : s32i [nsw]
                            %26 = cast(integral) %25 : s64i
                            %27 = get_element %4[%26] : s32i*
                            %28 = load %27 : s32i, align 4
                            call @foo(%28) [all]
                            yield
                        } else {
                            scope {
                                %15 = load %3 : s32i, align 4
                                %16 = const 7 : s32i
                                %17 = cmp ge %15, %16 : bool
                                %18 = ternary %17 ? { : bool
                                    %20 = load %3 : s32i, align 4
                                    %21 = const 9 : s32i
                                    %22 = cmp le %20, %21 : bool
                                    yield %22
                                } : {
                                    %19 = const #false : bool
                                    yield %19
                                }
                                if %18 {
                                    call @bar() [all]
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        %7 = get_global @abort : (() -> void)*
        call @abort() [all]
        %8 = load %2 : s32i
        return %8
}
